--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-redux": "^7.2.5",
